fix skill progress bar getting cut off

--- a/site/src/skill-box/skill-box.css
+++ b/site/src/skill-box/skill-box.css
@@ -46,7 +46,7 @@ skill-box {
   padding: 0 4px;
   box-sizing: border-box;
   position: absolute;
-  bottom: 0;
+  bottom: 1px;
 }
 
 .skill-box__progress-bar {
